--- a/public/index.html
+++ b/public/index.html
@@ -144,6 +144,14 @@
     }
   </style>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-V61B8F91DT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-V61B8F91DT');
+</script>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
