--- a/public/index.html
+++ b/public/index.html
@@ -154,6 +154,15 @@
     }
   </style>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7DW7X1L0FJ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-7DW7X1L0FJ');
+</script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-V61B8F91DT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
