--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,13 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Zarrar Palekar Portfolio Using React" />
+  <meta name="description" content="Senior MERN Full Stack Developer" />
 
   <meta name="keywords"
     content="web design, website design, website builder, web developer, web designer, webdesign, ecommerce website, Zarrar Palekar" />
 
   <meta name="author" content="Zarrar Palekar">
 
-  <meta name="description" content="Zarrar Palekar Portfolio Using React" />
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet" />
   <!-- React bootstrap link -->
