--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,12 @@
   <meta name="keywords"
     content="web design, website design, website builder, web developer, web designer, webdesign, ecommerce website, Zarrar Palekar" />
 
-  <meta name="author" content="Zarrar Palekar">
+  <meta name="author" content="@zarrarpalekar" />
+  <meta property="og:url" content="https://zarrarpalekar.com/" />
+  <meta property="og:site_name" content="Zarrar Palekar" />
+  <meta property="og:description" content="A seasoned MERN full stack developer" />
+  <meta property="og:title" content="Full Stack | MERN Stack | Developer" />
+  <link rel="canonical" href="https://www.zarrarpalekar.com" />
 
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Karla&display=swap" rel="stylesheet" />
